--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "json-server -w db.json -p 3333"
   },
   "dependencies": {
+    "bootstrap": "^5.3.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.3",
